Add Hugo van Kemenade (@hugovk) to acknowledgements

--- a/docs/contributing/4.-acknowledgements.md
+++ b/docs/contributing/4.-acknowledgements.md
@@ -12,6 +12,7 @@ Contributors
 
 ## Documenters
 - Sam Havens (@sam-qordoba)
+- Hugo van Kemenade (@hugovk)
 
 --------------------------------------------
 
